fix: replace overflow scroll with auto and apply custom scrollbar

--- a/frontend/app/chat/[chatId]/components/ActionsBar/components/ChatInput/components/ChatEditor/Editor/MentionsList/MentionsList.module.scss
+++ b/frontend/app/chat/[chatId]/components/ActionsBar/components/ChatInput/components/ChatEditor/Editor/MentionsList/MentionsList.module.scss
@@ -13,9 +13,9 @@
   gap: Spacings.$spacing02;
   max-width: 300px;
   min-width: 200px;
-  overflow: scroll;
+  overflow: auto;
   max-height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .mentions_list {
     display: flex;
