--- a/frontend/app/chat/[chatId]/components/ActionsBar/components/KnowledgeToFeed/KnowledgeToFeed.module.scss
+++ b/frontend/app/chat/[chatId]/components/ActionsBar/components/KnowledgeToFeed/KnowledgeToFeed.module.scss
@@ -23,7 +23,7 @@
   .tabs_content_wrapper {
     width: 100%;
     height: 80%;
-    overflow: scroll;
+    overflow: auto;
     padding: Spacings.$spacing01;
   }
 }
