--- a/frontend/app/studio/BrainsTabs/components/ManageBrains/BrainsList/BrainsList.module.scss
+++ b/frontend/app/studio/BrainsTabs/components/ManageBrains/BrainsList/BrainsList.module.scss
@@ -11,7 +11,7 @@
   border-radius: Radius.$big;
   overflow: hidden;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: Spacings.$spacing01;
   padding-bottom: Spacings.$spacing07;
 }
